--- a/_posts/2022-5-21-锁.md
+++ b/_posts/2022-5-21-锁.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: 编写PostgreSQL的extenison教程1-基础知识
-categories: extension
-description: how to write an extension
-keywords: extension-dev
+title: 2022-5-21-锁
+categories: lock-type
+description: postgres locks type
+keywords: lock
 ---
 
-# 编写PostgreSQL的extenison教程1-基础知识
+# 2022-5-21-锁
 
 ## 背景
 
@@ -338,7 +338,6 @@ base36_encode(PG_FUNCTION_ARGS)
 一旦我们完成了C的代码，我们需要修改SQL函数：
 
 <center>base36–0.0.1.sql</center>
-
 ```SQL
 -- complain if script is sourced in psql, rather than via CREATE EXTENSION
 \echo Use "CREATE EXTENSION base36" to load this file. \quit
@@ -350,7 +349,6 @@ LANGUAGE C IMMUTABLE STRICT;
 为了能够使用该函数，我们还需要修改Makefile（第4行）
 
 <center>Makefile</center>
-
 ```makefile
 EXTENSION = base36        # the extensions name
 DATA = base36--0.0.1.sql  # script files to install
@@ -374,7 +372,6 @@ include $(PGXS)
 你可能已经注意到了，我们的简单实现不适用于负数，就像之前使用0一样，它将返回一个空字符串。我们可能想为负值添加一个负号“-”或者只简单的抛出一个错误，我们选择了后者（12-20行）。
 
 <center>base36.c</center>
-
 ```c
 #include "postgres.h"
 #include "fmgr.h"
